restaurnt service implementation with more clear comments :