@@ -2,6 +2,8 @@ package com.devshaks.delivery.restaurant;
 
 import com.devshaks.delivery.cuisine.CuisineTypes;
 import com.devshaks.delivery.cuisine.CuisineTypesRepository;
+import com.devshaks.delivery.exceptions.CuisineNotFoundException;
+import com.devshaks.delivery.exceptions.RestaurantPurchaseException;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -13,44 +15,74 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class RestaurantService {
+
+    // Injects required dependencies for restaurant mapping, repository access, and cuisine management
     private final RestaurantMapper restaurantMapper;
     private final RestaurantRepository restaurantRepository;
     private final CuisineTypesRepository cuisineTypesRepository;
 
+    /**
+     * Creates a new restaurant entity in the system based on the provided request.
+     *
+     * @param restaurantRequest A valid RestaurantRequest containing restaurant details.
+     * @return The unique identifier (ID) of the newly created restaurant.
+     */
     public Integer createRestaurant(@Valid RestaurantRequest restaurantRequest) {
+        // Maps the request data to a Restaurant entity and saves it to the repository
         var restaurant = restaurantMapper.mapRestaurantToRequest(restaurantRequest);
-        return restaurantRepository.save(restaurant).getId();
+        return restaurantRepository.save(restaurant).getId(); // Returns the generated ID
     }
 
+    /**
+     * Handles the purchase of cuisines from a specific restaurant.
+     *
+     * @param restaurantPurchaseRequests A list of requests specifying the restaurant and cuisine(s) to be purchased.
+     * @param restaurantId The ID of the restaurant where the purchase is being made.
+     * @return A list of RestaurantPurchaseResponse objects containing the restaurant and cuisine details.
+     * @throws RestaurantPurchaseException If the requests are not for the same restaurant or the restaurant is not found.
+     * @throws CuisineNotFoundException If any requested cuisine does not exist or does not belong to the specified restaurant.
+     */
     public List<RestaurantPurchaseResponse> purchaseDelivery(List<RestaurantPurchaseRequest> restaurantPurchaseRequests, Integer restaurantId) {
-        // Validate that all requests are for the same restaurant
+
+        // Validates that all the purchase requests are for the same restaurant
         if (restaurantPurchaseRequests.stream().anyMatch(request -> !request.restaurantId().equals(restaurantId))) {
-            throw new IllegalArgumentException("All purchase requests must be for the same restaurant");
+            throw new RestaurantPurchaseException("All purchase requests must be for the same restaurant");
         }
 
-        // Fetch the restaurant
+        // Attempts to fetch the restaurant from the repository, throws an exception if not found
         Restaurant restaurant = restaurantRepository.findById(restaurantId)
-                .orElseThrow(() -> new EntityNotFoundException("Restaurant not found"));
+                .orElseThrow(() -> new RestaurantPurchaseException("Restaurant not found"));
 
-        // fetch all requested cuisines at once
+        // Collects all requested cuisine IDs from the purchase requests
         List<Integer> cuisineIds = restaurantPurchaseRequests.stream()
                 .map(RestaurantPurchaseRequest::cuisineId)
-                .toList();
+                .collect(Collectors.toList());
 
+        // Retrieves all cuisines matching the requested IDs from the repository
         List<CuisineTypes> cuisines = cuisineTypesRepository.findAllById(cuisineIds);
 
-        // validate that all requested cuisines were found
+        // Checks if any requested cuisines are missing from the fetched list
         if (cuisines.size() != cuisineIds.size()) {
-            throw new EntityNotFoundException("One or more cuisine types not found");
+            // Identifies which cuisine IDs were not found
+            List<Integer> foundCuisines = cuisines.stream()
+                    .map(CuisineTypes::getId)
+                    .collect(Collectors.toList());
+            List<Integer> missingCuisines = cuisineIds.stream()
+                    .filter(id -> !foundCuisines.contains(id))
+                    .collect(Collectors.toList());
+
+            // Throws an exception indicating the missing cuisine(s)
+            throw new CuisineNotFoundException("Cuisine(s) with ID(s) " + missingCuisines + " not found");
         }
 
-        // validate that all requested cuisines belong to the restaurant
+        // Ensures that each fetched cuisine belongs to the specified restaurant
         cuisines.forEach(cuisine -> {
             if (!cuisine.getRestaurant().getId().equals(restaurantId)) {
-                throw new IllegalArgumentException("Cuisine type does not belong to the restaurant");
+                throw new CuisineNotFoundException("Cuisine type does not belong to the restaurant");
             }
         });
 
+        // Maps the fetched cuisines to their respective RestaurantPurchaseResponse objects
         return cuisines.stream()
                 .map(cuisineTypes -> restaurantMapper.toRestaurantPurchaseResponse(restaurant, cuisineTypes))
                 .collect(Collectors.toList());
